fixed z-index issue on bg

--- a/src/assets/sass/components/_content.scss
+++ b/src/assets/sass/components/_content.scss
@@ -158,7 +158,7 @@
 .bg {
   position: fixed;
   width: 100%;
-  z-index: 100;
+  z-index: -100;
   display: flex;
   justify-content: flex-end;
   // outline: 1px solid red;
